# bofire-mixed-baselines

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
bofire_mixed_baselines/: domain_utils.py
bofire_mixed_baselines/benchmarks/: MAX_bandit.py  bandit.py  dataset.py  hpo_xgboost.py  pest.py  svr_bench.py  synthetic.py
bofire_mixed_baselines/data_models/strategies/: api.py  bart_grid.py  mapper.py
bofire_mixed_baselines/data_models/surrogates/: api.py  bart.py  mapper.py
bofire_mixed_baselines/strategies/: bart_grid.py  relaxed_sobo.py  smac.py
bofire_mixed_baselines/surrogates/: bart.py
tutorials/basic_examples/: mixed_space_bo.ipynb
