[tool.poetry]
name = "bofire-mixed-baselines"
version = "0.1.0"
description = "Strategies, surrogates and benchmarks for mixed-feature domains."
authors = ["Toby Boyne <tobyboyne@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
bofire = {extras = ["cheminfo", "optimization"], version = "^0.0.16"}


[tool.poetry.group.surrogates.dependencies]
pymc-bart = "^0.8.2"
xgboost = "^2.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I001"]
ignore = ["E721", "E731", "F722", "F821"]
ignore-init-module-imports = true

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]