[project]
name = "bofire-mixed-baselines"
version = "0.1.0"
description = "Strategies, surrogates and benchmarks for mixed-feature domains."
authors = [
    { name = "Toby Boyne", email = "tobyboyne@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bofire[cheminfo,optimization]>=0.0.16"
]

[project.optional-dependencies]
surrogates = [
    "pymc-bart~=0.8.2",
    "xgboost~=2.1.3"
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I001"]
ignore = ["E721", "E731", "F722", "F821"]
ignore-init-module-imports = true

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]